welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
def hunt(c:Color) {
  while(!estSurBiscuit()){
    if (isFacingTrail())
    avance()
    else {
      gauche()
      if (isFacingTrail())
      avance()
      else {
        droite();droite();avance()
      }
    }
    baisseBrosse()
    leveBrosse()
  }
  prendBiscuit()
}

def isFacingTrail():Boolean = {
  var k=false
  c=getCouleurSol()
  if (!estFaceMur()){
    avance()
    if (getCouleurSol()==c){
      k=true
    }
    recule()
  }
  return k 
}
